Add mapper, exception and constraint
